# zotero-rag

./: .gitignore  README.md  pyproject.toml
config/: config.example.toml  config.toml
docs/: ENVIRONMENT_REQUIREMENTS.md  INGEST_RUNNING_RESUME_BUG.md  INSTALLATION_CHECKLIST.md  PROJECT_PLAN.md  USAGE.md
reference/: mineru_cli.py  rag_server.py  rename_mineru_images.py
src/zoterorag/: __init__.py  backup.py  cli.py  diagnostics.py  documents.py  models.py  providers.py  review.py  runtime.py
src/zoterorag/api/: app.py  security.py  server.py
src/zoterorag/config/: __init__.py  settings.py
src/zoterorag/db/: __init__.py  state.py
src/zoterorag/embeddings/: __init__.py  base.py  indexer.py  profile.py  qwen.py
src/zoterorag/extractors/: __init__.py  base.py  cache.py  key_pool.py  manager.py  mineru.py  recovery.py
src/zoterorag/index/: __init__.py  lancedb_vector.py  local_vector.py  verification.py
src/zoterorag/mcp/: __init__.py  __main__.py  server.py  tools.py
src/zoterorag/normalize/: __init__.py  markdown.py
tests/: _support.py  test_api_security.py  test_api_server.py  test_backup.py  test_cli.py  test_config_settings.py  test_diagnostics.py  test_documents.py  test_embedding_indexer.py  test_extract_recovery.py  test_extraction_manager.py  test_fulltext_search.py  test_ingest_pipeline.py  test_key_pool.py  test_lancedb_vector.py  test_local_vector.py  test_mcp_server.py  test_mcp_tools.py  test_metadata_search.py  test_mineru_provider.py  test_models.py  test_normalize_markdown.py  test_progress.py  test_providers.py  test_query_image.py  test_qwen_embedding_provider.py  test_reembed_pipeline.py  test_review.py  test_runtime.py  test_search_results.py  test_search_schemas.py  test_state_ledger.py  test_vector_store.py  test_vector_verification.py  test_zotero_scanner.py  test_zotero_shadow.py
(+13 files in other folders)
