[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-rag"
version = "0.1.0"
description = "Local-first Zotero RAG service scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
lancedb = ["lancedb>=0.18"]
dev = ["pytest>=8"]

[project.scripts]
zoterorag = "zoterorag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

