[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-rag"
version = "0.1.0"
description = "Local-first Zotero RAG service scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.27"]
providers = ["requests>=2.32"]
pdf = ["PyMuPDF>=1.24", "Pillow>=10.4"]
lancedb = ["lancedb>=0.18"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
zoterorag = "zoterorag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
