[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-rag"
version = "0.1.0"
description = "Local-first Zotero RAG service scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["filelock>=3,<4"]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1", "httpx>=0.27,<1"]
mcp = ["mcp>=1.0,<2"]
providers = ["requests>=2.32,<3"]
pdf = ["PyMuPDF>=1.24,<2", "Pillow>=10.4,<11"]
lancedb = ["lancedb>=0.18,<1"]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
zoterorag = "zoterorag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
